Color de fondo, logo nuevo y mejor color de header

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,7 @@
 body
 {
-<<<<<<< HEAD
-    color: blue;
-=======
-    color: red;
->>>>>>> cabecera
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -14,7 +11,7 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
@@ -22,7 +19,11 @@ body
     padding: 0.5em;
 
 }
-
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -46,5 +47,6 @@ body
 
 #post
 {
+    background: white;
     padding: 1em;
 }
