--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,16 @@ body {
 }
 .cabecera {
     background-color: green;
+    font-size: 20px;
+}
+.cabecera ul {
+    list-style: none;
+}
+.cabecera ul li {
+    display: inline-block;
+    padding: 10px;
+}
+a{ 
+    color: white;
+    text-decoration: none;
 }
