agregue sub, cambio de header y color de texto a marron

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    color: #333;
+    color: brown;
     font-size: 16px;
 }
 .container {
