Se cambio tamaño del header, se añadieron colores de fondo

--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,21 @@ body {
     text-align: center;
     color: red;
     font-size: 16px;
+    background-color: #72db16;
 }
 .container {
     width: 70%;
     text-align: left;
     padding: 1em;
     border: 1px solid #555555;
+    background-color: #cfcfcc;
     margin: 0 auto;
 }
 .container h1 {
     font-size: 25px;
 }
 .cabecera {
-    background-color: green;
+    background-color: #3b2dbb;
     font-size: 20px;
 }
 .cabecera ul {
@@ -23,9 +25,12 @@ body {
 }
 .cabecera ul li {
     display: inline-block;
-    padding: 10px;
+    padding: 20px;
 }
 a{ 
     color: white;
     text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
 }
