--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,19 @@
 body{
-    color: rgb(55, 33, 193);
+    color: rgb(55, 192, 31);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 4px solid rgb(214, 220, 220);
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
