--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,20 @@ body{
     padding: 0;
 }
 
+#cabecera{
+    background-color: rgb(213, 224, 224);
+    box-shadow: 0px 5px 30px 0px rgb(213, 224, 224);
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+
+#cabecera #tagline{
+    margin: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
     padding: 1em;
