--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,3 @@
-body
-{
-    color: deeppink;
-    text-align: center;
-    font-family: "Arial";
-}
+body{color:#333;text-align:center;font-family:arial;font-size:16px;margin:0;padding:0;}
+#container{width:70%;padding:1em;text-align:left;border:1px solid #ddd;margin:0 auto;}
+#container h1{font-size:20px;}
