logo del header y actualización de archivos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,1 @@
-
-body{color:rgb(22, 162, 31);text-align:left;font-family:arial;font-size:16px;margin:0;padding:0;}
->>>>>>> cabecera
-#container{width:70%;padding:1em;text-align:left;border:1px solid #ddd;margin:0 auto;}
-#container h1{font-size:20px;}
+body{background:#1e1f24;color:#333;text-align:center;font-family:Arial;font-size:16px;margin:0;padding:0}#cabecera{background:#37488b;box-shadow:0 2px 20px 0 rgba(0,0,0,.5);color:#fff;font-weight:700;margin:0;padding:.5em}#cabecera #logo{width:20px;vertical-align:middle}#cabecera #tagline{padding:0 0 0 1em;font-weight:400;font-size:.8em}#container{width:70%;padding:0;text-align:left;border:1px solid #ddd;margin:0 auto}#container h1{font-size:20px}#post{background:#fff;padding:1em}
