--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,11 @@
-body
+#body
 {
-  color: #333;
-  text-align: center;
-  font-family: "Arial";
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
+   color: #333;
+   text-align: center;
+   font-family: "Arial";
+   font-size: 16px;
+   margin: 0;
+   padding: 0;
 }
 #container
 {
