--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
    color: #333;
    text-align: center;
-   font-family: 'Courier New', Courier, monospace;
+   font-family: 'Times New Roman', Times, serif
    font-size: 16px;
    margin: 0;
    padding: 0;
