--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,11 +2,12 @@ body
 {
    color: #333;
    text-align: center;
-   font-family: "Arial"
+   font-family: "Arial";
    font-size: 16px;
    margin: 0;
    padding: 0;
 }
+
 #container
 {
     width: 70%;
