--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,17 @@
 body{
-    color: pink;
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Arial';
+    color:#333;
+    text-align:center;
+    font-family:arial;
+    font-size:20px;margin:0;
+    padding:0
+}
+#container{
+        width:70%;
+        padding:1em;
+        text-align:left;
+        border:2px solid #ddd;
+        margin:0 auto
+}
+#container h1{
+    font-size:30px
 }
