Finalizada la cabecera con diseño azul

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,19 @@ body{
     font-size:20px;margin:0;
     padding:0
 }
+#cabecera{
+    background:#33a;
+    box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
+    color:#fff;
+    font-weight:700;
+    margin:0;
+    padding:.5em
+}
+#cabecera #tagline{
+    padding:0 0 0 1em;
+    font-weight:400;
+    font-size:.8em
+}
 #container{
         width:70%;
         padding:1em;
