modificacion de parrafo y letra

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color:#333;
     text-align:center;
-    font-family:arial;
+    font-family:'Courier New', Courier, monospace;
     font-size:20px;margin:0;
     padding:0
 }
