--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,30 +1,40 @@
-body{
-    color:#333;
-    text-align:center;
-    font-family:'Courier New', Courier, monospace;
-    font-size:20px;margin:0;
-    padding:0
+body
+{background:#1e1f24;
+color:#333;
+text-align:center;
+font-family:Arial;
+font-size:16px;
+margin:0;
+padding:0
 }
-#cabecera{
-    background:#33a;
+#cabecera
+{background:#37488b;
     box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
     color:#fff;
     font-weight:700;
     margin:0;
     padding:.5em
 }
-#cabecera #tagline{
-    padding:0 0 0 1em;
-    font-weight:400;
-    font-size:.8em
+#cabecera #logo
+{width:20px;
+vertical-align:middle
 }
-#container{
-        width:70%;
-        padding:1em;
-        text-align:left;
-        border:2px solid #ddd;
-        margin:0 auto
+#cabecera #tagline
+{
+padding:0 0 0 1em;
+font-weight:400;
+font-size:.8em
 }
-#container h1{
-    font-size:30px
+#container
+{width:70%;
+padding:0;
+text-align:left;
+border:1px solid #ddd;
+margin:0 auto
+}
+#container h1
+{font-size:20px
+}
+#post
+{background:#fff;padding:1em
 }
