Cabecera footer terminado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,3 +28,9 @@ body{
 #container h1{
     font-size:30px
 }
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5 rem;
+}
